--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,15 @@
         android:theme="@style/Theme.Ejercicio10Aleatorizadoreventos"
         tools:targetApi="31">
         <activity
+            android:name=".pantallaResumen"
+            android:exported="false" />
+        <activity
+            android:name=".pantallaRaza"
+            android:exported="false" />
+        <activity
+            android:name=".pantallaClases"
+            android:exported="false" />
+        <activity
             android:name=".registrado"
             android:exported="false" />
         <activity
@@ -43,8 +52,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
     </application>
 
 </manifest>
